# TEST

./: README.rst  autogen.py  autoinsta.py  autorun.py  autounintall.py  setup.cfg  setup.py
UNKNOWN.egg-info/: SOURCES.txt
attr_pack.development.value.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pack/: __init__.py
pack.egg-info/: PKG-INFO  SOURCES.txt
pack/conf/: __init__.py  co1  conf1.toml  conf2.txt  conf3.toml  conf4.toml  data.json  data2.json  default.json  file_creation.py  file_managment.py  module_managment.py
pack/development/: __init__.py  build_tools.py
pack/folder/: __init__.py  valores2.py
pack/prog/: __init__.py  sumar.py  valores.py
