[metadata]
name = pack
version =  attr: pack.__version__
url = false
download_url = false
author = Rafael Exposito Verdejo
author_email = false@hotmail.com
maintainer = Rafael Exposito false
maintainer_email = false@hotmail.com
description = A high-level python modules to compile/debug STM32 microcontrollers programs.
long_description = file: README.rst
long_description_content_type = reStructuredText
license = Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)
license_files = LICENSE
platform =  Windows
# lock https://pypi.org/classifiers/
classifiers =
	Topic :: Software Development :: Embedded Systems
project_urls = 
	Git = https://github.com/false

[options]
install_requires =
    python_version>='3.4'
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false




# List of options
#[options.zip_safe]
#[options.setup_requires]
#[options.install_requires]
#[options.extras_require]
#[options.python_requires]
#[options.entry_points]
#[options.scripts]
#[options.eager_resources]
#[options.dependency_links]
#[options.tests_require]
#[options.test_loader]
#[options.test_suite]
#[options.include_package_data]
#[options.packages]
#[options.package_dir]
#[options.package_data]
#[options.exclude_package_data]
#[options.namespace_packages]
#[options.py_modules]
#[options.data_files]



[egg_info]
tag_build = 
tag_date = 0

